# tennis-predictor

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: data.yaml  features.yaml  model.yaml
src/clean/: data_processor.py
src/ingest/: webscraper.py
src/ratings/: elo_system.py
