[tool.poetry]
name = "tennis-predictor"
version = "0.1.0"
description = "Pre-match win probability model for ATP singles tennis"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.0"
polars = "^0.19.0"
duckdb = "^0.9.0"
pyarrow = "^13.0.0"
pandera = "^0.17.0"
lightgbm = "^4.1.0"
xgboost = "^2.0.0"  
scikit-learn = "^1.3.0"
pydantic = "^2.4.0"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
mlflow = "^2.8.0"
omegaconf = "^2.3.0"
hydra-core = "^1.3.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
plotly = "^5.17.0"
pyyaml = "^6.0"
tqdm = "^4.66.0"
joblib = "^1.3.0"
click = "^8.1.0"
selenium = "^4.15.0"
beautifulsoup4 = "^4.12.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.9.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.6.0"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=html --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true